# simple_ransomware

./: Cargo.toml  Dioxus.toml  README.md  bkup.css
assets/: main.css  skull.txt
assets/styling/: main.css
src/: main.rs
